# e-form

./: .env  Cargo.toml  Rocket.toml  commented-out.md
migrations/: 20230117235149_users.down.sql  20230117235149_users.up.sql  20230119030415_forms.down.sql  20230119030415_forms.up.sql  20230119030848_questions.down.sql  20230119030848_questions.up.sql  20230119031511_responses.down.sql  20230119031511_responses.up.sql
src/: auth.rs  main.rs  model.rs
src/routes/: form.rs  mod.rs  response.rs  template.rs  user.rs
static/: index.html  main.js
static2/: index.html  main.js
